--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -26,14 +26,14 @@ tooltip {
   border-radius: 10px;
 }
 tooltip label {
-  color: @text-light;
+  color: @text-dark;
 }
 
 #workspaces {
   margin: 15px 5px 8px 30px;
   background: @main;
   border-radius: 10px;
-  box-shadow: 1px 1px 3px rgba(0, 0, 0, .65);
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.65);
   padding: 2px 6px;
 }
 
@@ -59,7 +59,7 @@ tooltip label {
   border-radius: 10px;
   padding: 0px 10px;
   margin: 15px 5px 8px 5px;
-  box-shadow: 1px 1px 3px rgba(0, 0, 0, .65);
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.65);
   background: @background-alt;
 }
 
@@ -72,7 +72,7 @@ tooltip label {
   background: @accent;
   padding: 0px 10px;
   margin: 15px 5px 8px 5px;
-  box-shadow: 1px 1px 3px rgba(0, 0, 0, .65);
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.65);
 }
 
 /* Component groups */
