--- a/.config/wlogout/style_vertical.css
+++ b/.config/wlogout/style_vertical.css
@@ -56,11 +56,11 @@ button:hover {
   background-image: image(url("./icons/suspend-dark.png"));
 }
 
-#hibernate {
-  background-image: image(url("./icons/hibernate-light.png"));
+#logout {
+  background-image: image(url("./icons/logout-light.png"));
 }
-#hibernate:hover {
-  background-image: image(url("./icons/hibernate-dark.png"));
+#logout:hover {
+  background-image: image(url("./icons/logout-dark.png"));
 }
 
 #logout {
